# traffic_tool

./: .gitignore  CORE_SO_GUIDE.md  GAME_CAPTURE_GUIDE.md  HTTPS_CERTIFICATE_SETUP.md  HTTPS_PROXY_GUIDE.md  MITMPROXY_GUIDE.md  NETWORK_FINAL_FIX.md  README.md  REMAINING_WORK.md  REMOTE_SERVER_SOLUTION.md  SETUP.md  WIREGUARD_VPN_DEPLOYMENT.md  build.bat  build.gradle  build_apk.bat  build_with_java21.bat  deploy_server.sh  gradle.properties  gradlew  gradlew.bat  mobile_proxy_server.py  settings.gradle  test_simple_vpn.sh  update_server.sh
.github/: copilot-instructions.md
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  core_stub.cpp  simple_proxy.cpp  tun2socks_bridge.cpp
app/src/main/java/com/trafficcapture/: FullVpnService.kt  GameTrafficAnalyzer.kt  HttpsDecryptor.kt  HttpsProxyServer.kt  IpPacketProcessor.kt  LightVpnService.kt  MainActivity.kt  MonitorVpnService.kt  NetworkForwarder.kt  NetworkRequest.kt  Packet.kt  PacketAdapter.kt  PacketBuilder.kt  PacketInfo.kt  PacketParser.kt  RemoteProxyManager.kt  SimpleProxyService.kt  SimpleVpnService.kt  TcpForwarder.kt  TrafficAdapter.kt  TrafficVpnService.kt  TunVpnService.kt  UdpForwarder.kt  VpnService.kt  WireGuardConfigManager.kt
app/src/main/java/com/trafficcapture/examples/: ProxyConfigurationExamples.kt
app/src/main/res/layout/: activity_main.xml  item_traffic.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
gradle/wrapper/: gradle-wrapper.properties
remote_server/: README.md  deploy_server.sh  deploy_vpn_system.sh  diagnose_server.py  mobile_proxy_server.py  quick_fix.sh  quick_setup.sh  setup_wireguard.sh  vpn_traffic_server.py
(+9 files in other folders)
